--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
 	<meta charset="UTF-8" />
-  	<meta name="description" content="Welcome to OSRS Clicker!" />
-  	<meta name="keywords" content="Run, Escape, RunEscape, Incremental, Clicker, Game" />
-  	<meta name="author" content="Joe Gretton" />
-  	<title>OSRS Clicker</title>
-  	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="description" content="Welcome to OSRS Clicker!" />
+	<meta name="keywords" content="Run, Escape, RunEscape, Incremental, Clicker, Game" />
+	<meta name="author" content="Joe Gretton" />
+	<title>OSRS Clicker</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+	<div id="saveGame" onclick="saveGame()">Save Game</div>
+	<div id="loadGame" onclick="loadGame()">Load Game</div>
+	<div id="clearSave" onclick="clearSave()">Clear Save</div>
 	<div id="game-container">
 		<div id="gameplay-screen">
 			<div id="skill-screen" style="display: none;">
@@ -41,7 +44,7 @@
 						<div id="title-right">Other Stuff</div>
 						<div id="menu-left">
 							<div id="clay" class="action-plate">
-								<img src="images/icons/clay.png"/>
+								<img src="images/icons/clay.png" />
 								<div>
 									<div id="clay" class="action-button">Clay</div>
 									<div id="action-info">
@@ -51,7 +54,7 @@
 								</div>
 							</div>
 							<div id="copperOre" class="action-plate">
-								<img src="images/icons/copperOre.png"/>
+								<img src="images/icons/copperOre.png" />
 								<div>
 									<div id="copperOre" class="action-button">Copper Ore</div>
 									<div id="action-info">
@@ -61,7 +64,7 @@
 								</div>
 							</div>
 							<div id="tinOre" class="action-plate">
-								<img src="images/icons/tinOre.png"/>
+								<img src="images/icons/tinOre.png" />
 								<div>
 									<div id="tinOre" class="action-button">Tin Ore</div>
 									<div id="action-info">
@@ -71,7 +74,7 @@
 								</div>
 							</div>
 							<div id="runeEssence" class="action-plate">
-								<img src="images/icons/clay.png"/>
+								<img src="images/icons/clay.png" />
 								<div>
 									<div id="runeEssence" class="action-button disabled">Rune Essence</div>
 									<div id="action-info">
@@ -92,45 +95,45 @@
 		</div>
 		<div id="minimap-container"></div>
 		<div id="sidebar-container">
-	 		<div id="sidebar-menu-top">
-	 			<div id="combat" class="tab combat"></div>
+			<div id="sidebar-menu-top">
+				<div id="combat" class="tab combat"></div>
 				<div id="skills" class="tab skills"></div>
-	 			<div id="quests" class="tab quests"></div>
-	 			<div id="inventory" class="tab inventory"></div>
-	 			<div id="equipment" class="tab equipment"></div>
-	 			<div id="prayer" class="tab prayer"></div>
-	 			<div id="spells" class="tab spells"></div>
-	 		</div>
-	 		<div id="sidebar">
-	 			<div id="sidebar-panel">
-					 <div id="combat-panel" class="panel hide">
+				<div id="quests" class="tab quests"></div>
+				<div id="inventory" class="tab inventory"></div>
+				<div id="equipment" class="tab equipment"></div>
+				<div id="prayer" class="tab prayer"></div>
+				<div id="spells" class="tab spells"></div>
+			</div>
+			<div id="sidebar">
+				<div id="sidebar-panel">
+					<div id="combat-panel" class="panel hide">
 
-					 </div>
+					</div>
 					<div id="skills-panel" class="panel hide">
 						<div id="skills-container">
-							<div id="attack" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="hitpoints" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="mining" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="strength" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="agility" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="smithing" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="defence" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="herblore" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="fishing" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="ranged" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="thieving" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="cooking" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="prayer" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="crafting" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="firemaking" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="magic" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="fletching" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="woodcutting" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="runecrafting" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="slayer" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="farming" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="construction" class="skill"><img src="images/Skill Overlay.png"/></div>
-							<div id="hunter" class="skill"><img src="images/Skill Overlay.png"/></div>
+							<div id="attack" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="hitpoints" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="mining" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="strength" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="agility" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="smithing" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="defence" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="herblore" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="fishing" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="ranged" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="thieving" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="cooking" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="prayer" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="crafting" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="firemaking" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="magic" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="fletching" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="woodcutting" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="runecrafting" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="slayer" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="farming" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="construction" class="skill"><img src="images/Skill Overlay.png" /></div>
+							<div id="hunter" class="skill"><img src="images/Skill Overlay.png" /></div>
 							<div id="total-level"></div>
 						</div>
 					</div>
@@ -138,7 +141,15 @@
 
 					</div>
 					<div id="inventory-panel" class="panel hide">
-
+						<div id="inventory-container">
+							<div id="slot1"><img src="images/icons/clay.png"/></div><div id="slot2"><img src="images/icons/tinOre.png"/></div><div id="slot3"><img src="images/icons/copperOre.png"/></div><div id="slot4"><img src="images/icons/clay.png"/></div>
+							<div id="slot5"><img src="images/icons/clay.png"/></div><div id="slot6"><img src="images/icons/tinOre.png"/></div><div id="slot7"><img src="images/icons/copperOre.png"/></div><div id="slot8"><img src="images/icons/clay.png"/></div>
+							<div id="slot9"><img src="images/icons/clay.png"/></div><div id="slot10"><img src="images/icons/tinOre.png"/></div><div id="slot11"><img src="images/icons/copperOre.png"/></div><div id="slot12"><img src="images/icons/clay.png"/></div>
+							<div id="slot13"><img src="images/icons/clay.png"/></div><div id="slot14"><img src="images/icons/tinOre.png"/></div><div id="slot15"><img src="images/icons/copperOre.png"/></div><div id="slot16"><img src="images/icons/clay.png"/></div>
+							<div id="slot17"><img src="images/icons/clay.png"/></div><div id="slot18"><img src="images/icons/tinOre.png"/></div><div id="slot19"><img src="images/icons/copperOre.png"/></div><div id="slot20"><img src="images/icons/clay.png"/></div>
+							<div id="slot21"><img src="images/icons/clay.png"/></div><div id="slot22"><img src="images/icons/tinOre.png"/></div><div id="slot23"><img src="images/icons/copperOre.png"/></div><div id="slot24"><img src="images/icons/clay.png"/></div>
+							<div id="slot25"><img src="images/icons/clay.png"/></div><div id="slot26"><img src="images/icons/tinOre.png"/></div><div id="slot27"><img src="images/icons/copperOre.png"/></div><div id="slot28"><img src="images/icons/clay.png"/></div>
+						</div>
 					</div>
 					<div id="equipment-panel" class="panel hide">
 
@@ -151,19 +162,19 @@
 					</div>
 
 					<!-- div#botmenu... -->
-				 </div>
-	 		</div>
-	 		<div id="sidebar-menu-bottom">
+				</div>
+			</div>
+			<div id="sidebar-menu-bottom">
 				<div id="botmenu1" class="tab botmenu1"></div>
 				<div id="botmenu2" class="tab botmenu2"></div>
-	 			<div id="botmenu3" class="tab botmenu3"></div>
-	 			<div id="botmenu4" class="tab botmenu4"></div>
-	 			<div id="botmenu5" class="tab botmenu5"></div>
-	 			<div id="botmenu6" class="tab botmenu6"></div>
-	 			<div id="botmenu7" class="tab botmenu7"></div>
-			 </div>
-	 	</div>
-	 	<div id="textbox"></div>
+				<div id="botmenu3" class="tab botmenu3"></div>
+				<div id="botmenu4" class="tab botmenu4"></div>
+				<div id="botmenu5" class="tab botmenu5"></div>
+				<div id="botmenu6" class="tab botmenu6"></div>
+				<div id="botmenu7" class="tab botmenu7"></div>
+			</div>
+		</div>
+		<div id="textbox"></div>
 		<div id="textbox-settings"></div>
 
 		<!-- do this -->
@@ -173,14 +184,20 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="jquery.easing.1.3.js"></script>
 	<script src="helpers.js"></script>
 	<script src="driver.js"></script>
 	<script src="skills.js"></script>
+	<script src="actions.js"></script>
 	<script src="view.js"></script>
 	<script src="items.js"></script>
 	<script src="player.js"></script>
+	<script src="saving.js"></script>
 	<script src="clickResponses.js"></script>
 
-	<script>startGame()</script>
+	<script>
+		startGame()
+	</script>
 </body>
+
 </html>
