Mining skill + Drag & drop inventory

--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 					</div>
 					<div id="inventory-panel" class="panel hide">
 						<div id="inventory-container">
-							<div id="slot1"><img src="images/icons/clay.png"/></div><div id="slot2"><img src="images/icons/tinOre.png"/></div><div id="slot3"><img src="images/icons/copperOre.png"/></div><div id="slot4"><img src="images/icons/clay.png"/></div>
-							<div id="slot5"><img src="images/icons/clay.png"/></div><div id="slot6"><img src="images/icons/tinOre.png"/></div><div id="slot7"><img src="images/icons/copperOre.png"/></div><div id="slot8"><img src="images/icons/clay.png"/></div>
-							<div id="slot9"><img src="images/icons/clay.png"/></div><div id="slot10"><img src="images/icons/tinOre.png"/></div><div id="slot11"><img src="images/icons/copperOre.png"/></div><div id="slot12"><img src="images/icons/clay.png"/></div>
-							<div id="slot13"><img src="images/icons/clay.png"/></div><div id="slot14"><img src="images/icons/tinOre.png"/></div><div id="slot15"><img src="images/icons/copperOre.png"/></div><div id="slot16"><img src="images/icons/clay.png"/></div>
-							<div id="slot17"><img src="images/icons/clay.png"/></div><div id="slot18"><img src="images/icons/tinOre.png"/></div><div id="slot19"><img src="images/icons/copperOre.png"/></div><div id="slot20"><img src="images/icons/clay.png"/></div>
-							<div id="slot21"><img src="images/icons/clay.png"/></div><div id="slot22"><img src="images/icons/tinOre.png"/></div><div id="slot23"><img src="images/icons/copperOre.png"/></div><div id="slot24"><img src="images/icons/clay.png"/></div>
-							<div id="slot25"><img src="images/icons/clay.png"/></div><div id="slot26"><img src="images/icons/tinOre.png"/></div><div id="slot27"><img src="images/icons/copperOre.png"/></div><div id="slot28"><img src="images/icons/clay.png"/></div>
+							<div id="slot1" class="invSlot"></div><div id="slot2" class="invSlot"></div><div id="slot3" class="invSlot"></div><div id="slot4" class="invSlot"></div>
+							<div id="slot5" class="invSlot"></div><div id="slot6" class="invSlot"></div><div id="slot7" class="invSlot"></div><div id="slot8" class="invSlot"></div>
+							<div id="slot9" class="invSlot"></div><div id="slot10" class="invSlot"></div><div id="slot11" class="invSlot"></div><div id="slot12" class="invSlot"></div>
+							<div id="slot13" class="invSlot"></div><div id="slot14" class="invSlot"></div><div id="slot15" class="invSlot"></div><div id="slot16" class="invSlot"></div>
+							<div id="slot17" class="invSlot"></div><div id="slot18" class="invSlot"></div><div id="slot19" class="invSlot"></div><div id="slot20" class="invSlot"></div>
+							<div id="slot21" class="invSlot"></div><div id="slot22" class="invSlot"></div><div id="slot23" class="invSlot"></div><div id="slot24" class="invSlot"></div>
+							<div id="slot25" class="invSlot"></div><div id="slot26" class="invSlot"></div><div id="slot27" class="invSlot"></div><div id="slot28" class="invSlot"></div>
 						</div>
 					</div>
 					<div id="equipment-panel" class="panel hide">
